<resources>
    <!-- string text for app name -->
    <string name="app_name">ProductInventoryApp</string>
    <!-- string text when no found product -->
    <string name="no_products_found">No products found..Please enter new product by press edit button below in right of the screen</string>

    <!-- all string below it used in this app -->
    <string name="press_the_add_icon_to_begin">Press the add icon to begin.</string>
    <string name="product">Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_photo">Photo</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_email">Email Supplier</string>
    <string name="stock_quantity"> Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="edit_price">Price</string>
    <string name="invalid_product_name">Require a valid product name</string>
    <string name="invalid_supplier">Requires valid supplier name</string>
    <string name="invalid_price">Requires a valid numeric value</string>
    <string name="invalid_quantity">numbers only</string>
    <string name="operation_error">Error</string>
    <string name="operation_successful">Saved</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="delete_product">Delete</string>
    <string name="discard_changes">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current Product[CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current Product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current Product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="sale">Sale</string>
    <string name="numbers_only">Numeric values only</string>
    <string name="numeric_not_null">Must provide a value</string>
</resources>
