<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context="com.example.mohammedragab.productinventoryapp.MainActivity">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/ProductTitleTextView"
                    android:text="@string/product_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/text_color"
                    android:alpha="0.5"/>

                <TextView
                    android:text="@string/quantity"
                    android:layout_height="wrap_content"
                    android:id="@+id/QuantityTitleTextView"
                    android:layout_width="60dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:textColor="@color/text_color"
                    android:alpha="0.5"/>

                <TextView
                    android:text="Price $"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/PriceTitleTextView"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:textColor="@color/text_color"
                    android:alpha="0.5"
                    android:layout_marginRight="90dp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ProductListView"/>

                <RelativeLayout
                    android:id="@+id/empty_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/empty_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/no_products_found"
                        android:textAppearance="?android:textAppearanceMedium"/>

                    <ImageView
                        android:id="@+id/empty_store"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/empty_title_text"
                        android:layout_centerHorizontal="true"
                        android:paddingTop="8dp"
                        android:src="@drawable/ic_store_black_24dp"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="#A2AAB0"/>
                </RelativeLayout>
            </RelativeLayout>


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_mode_edit_black_24dp"/>
</RelativeLayout>
